src/main/java/com/example/demo/paypal/res/error/capture/Details.java
package com.example.demo.paypal.res.error.capture;

import lombok.Data;

@Data
public class Details {
	private String issue;
	private String description;
}
